<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- === ORDER INPUT === -->
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Just Java</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <!-- Header text for the list of extras [CHAR LIMIT=20] -->
    <string name="toppings">TOPPINGS</string>

    <!-- Hint text for whipped cream checkbox [CHAR LIMIT=20] -->
    <string name="add_whip">Whipped Cream</string>

    <!-- Hint text for chocolate checkbox [CHAR LIMIT=20] -->
    <string name="add_chocolate">Chocolate</string>

    <!-- Header text for adjusting quantity [CHAR LIMIT=20] -->
    <string name="quantity">QUANTITY</string>

    <!-- Button text for Order button [CHAR LIMIT=10] -->
    <string name="order">Order</string>

    <!-- === ORDER SUMMARY === -->
    <!--
      Name for the order summary. It will be shown in the format of "Name: Connie" where Connie is
      the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Connie">%s</xliff:g></string>

    <!--
       Whipped cream topping for the order summary. It will be shown in the format of
       "Add whipped cream? true" or "Add whipped cream? false" [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_whip">Add whipped cream? <xliff:g id="addWhip" example="true">%b</xliff:g></string>

    <!--
       Chocolate topping for the order summary. It will be shown in the format of
       "Add chocolate? true" or "Add chocolate? false" [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>

    <!--
       Quantity of coffee cups for the order summary. It will be shown in the format of
       "Quantity: 2", where 2 is the number of cups orderes. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>

    <!--
      Total price for the order summary. It will be shown in the format of
      "Total: $10" where $10 is the price.  [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you!</string>

    <!-- === ORDER EMAIL === -->
    <!--
       Subject line for the order summary email. It will be in the format of
       "Just Java order for Connie" where Connie is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">Just Java Order for <xliff:g id="name" example="Connie">%s</xliff:g></string>
</resources>
